[WK1] Null dereference loading Blink layout test editing/input/text-input-controller-no-editable-no-crash.html https://bugs.webkit.org/show_bug.cgi?id=149484 <rdar://problem/22811338>

Reviewed by Darin Adler.

Source/WebKit/mac:

firstRectForCharacterRange(): don't fall over in an editable-less frame.

* WebView/WebFrame.mm:
(-[WebFrame _convertToDOMRange:]):

LayoutTests:

This test is from Blink r194870:
https://codereview.chromium.org/1122593004

* editing/mac/input/text-input-controller-no-editable-no-crash-expected.txt: Added.
* editing/mac/input/text-input-controller-no-editable-no-crash.html: Added.
* platform/wk2/TestExpectations:


Canonical link: https://commits.webkit.org/169091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192007 268f45cc-cd09-0410-ab3c-d52691b4dbfc